fix overflow on review-spec-modal

--- a/assets/scss/modals.scss
+++ b/assets/scss/modals.scss
@@ -327,6 +327,10 @@ body.modal-open,
       a {
         font-weight: 700;
       }
+
+      div > p {
+        overflow: auto;
+      }
     }
   }
 
