--- a/assets/scss/popovers.scss
+++ b/assets/scss/popovers.scss
@@ -141,7 +141,7 @@
 
     .sprite-icons-output {
       background: url(/images/sprite-icons-output.svg) no-repeat;
-      background-size: 90px;
+      background-size: 90px 30px;
       border: 1px solid;
       border-color: rgba(0,0,0,.15) rgba(0,0,0,.15) rgba(0,0,0,.2);
       float: left;
